[tool.poetry]
name = "winpath"
version = "0.1.0"
description = "Tool for handling path-like objects on Windows systems"
authors = ["DJ Stomp <stompzone@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
